# tts-plugin-mozilla_remote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: license_tests.yml  publish_release.yml  publish_test_build.yml  pull_master.yml  release_build.yml  release_please.yml  unit_tests.yml
requirements/: requirements.txt  test_requirements.txt
tests/: test_mtts.py
tts_plugin_mozilla_remote/: __init__.py  version.py
