[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-plugin-mozilla_remote"
description = "A Mozilla/Coqui TTS plugin for Neon and OVOS"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Neongecko/Oscillate Labs", email = "mike@oscillatelabs.net" },
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
]
keywords = ["mycroft", "ovos", "neon", "plugin", "tts"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/OscillateLabsLLC/tts-plugin-mozilla_remote"

[project.entry-points."mycroft.plugin.tts"]
mozilla_remote = "tts_plugin_mozilla_remote:MozillaRemoteTTS"

[tool.setuptools.dynamic]
version = { attr = "tts_plugin_mozilla_remote.version.__version__" }
dependencies = { file = ["requirements/requirements.txt"] }
optional-dependencies.test = { file = ["requirements/test_requirements.txt"] }

[tool.setuptools.packages.find]
include = ["tts_plugin_mozilla_remote*"]

[tool.uv]
# Pin setuptools below 81 — 81 removed --dry-run, 82 removed pkg_resources
# entirely. The setuptools high-sev advisory (PackageIndex.download path
# traversal) is build-time only via easy_install which we don't invoke.
# Revisit once the OVOS dep chain confirms importlib.metadata-only paths.
constraint-dependencies = ["setuptools<81"]
